# facturapi-python

./: LICENSE  README.md  catalogs.txt  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/facturapi/: __init__.py  catalogs.py  constants.py  customers.py  enums.py  exceptions.py  http.py  invoice_relation.py  invoices.py  models.py  organizations.py  products.py  receipts.py  retentions.py  tools.py  wrapper.py
tests/: customers_test.py  invoices_test.py  mocks.py  products_test.py  settings.py  testcase.py
