[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facturapi-python"
version = "0.1.3"
authors = [{ name = "TI Sin Problemas", email = "pypi@tisinproblemas.com" }]
description = "Unofficial Facturapi.io Python client"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.5"
dependencies = ["requests>=2.20, <3"]
keywords = ["cfdi", "factura", "mexico", "sat"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/TI-Sin-Problemas/facturapi-python"
"Bug Tracker" = "https://github.com/TI-Sin-Problemas/facturapi-python/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/facturapi"]
